fix: fix count-up svg & bubble z-index

--- a/src/count-up/_count-up.scss
+++ b/src/count-up/_count-up.scss
@@ -48,9 +48,7 @@
 
     &.active {
       .bubbles {
-        // opacity: 1;
         visibility: visible;
-        // display: block;
       }
     }
 
@@ -229,6 +227,8 @@
         display: block;
         background-size: 175px 175px;
         background-position: 10px 10px;
+        position: relative;
+        z-index: 1;
 
         .kds-count-up--properties & {
           background-image: url(/img/icons/count_properties.svg);
@@ -253,6 +253,7 @@
         background-color: var(--l-section--background, white);
         border-radius: 35%; // Smooth edges to appear like liquid
         animation: spin 4s ease-out forwards; // Set to forwards to freeze on last frame
+        z-index: 1;
       }
     }
   }
